refactor: .toList로 코드 일관성